--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li><a href="">home</a></li>
+        <li><a href="">about</a></li>
+        <li><a href="">FAQ</a></li>
+        <li><a href="">products</a></li>
+        <li><a href="">contact</a></li>
+    </ul>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, accusamus. Voluptatibus nobis illo sit minus blanditiis numquam doloremque facilis rerum temporibus, ab perspiciatis architecto et veniam provident sapiente voluptates earum?</p>
     <a href=""></a>
+
 </body>
 </html>
